fix: avoid InlineCode wrap the text

--- a/src/once-ui/components/InlineCode.module.scss
+++ b/src/once-ui/components/InlineCode.module.scss
@@ -8,4 +8,5 @@
     font-size: 80%;
     margin: 0 var(--static-space-2);
     vertical-align: middle;
+    white-space: nowrap;
 }
